@@ -2758,8 +2758,7 @@ enum
     STR_THEMES_OPTION_RCT1_RIDE_CONTROLS = 5282,
     STR_THEMES_OPTION_RCT1_PARK_CONTROLS = 5283,
     STR_THEMES_OPTION_RCT1_SCENARIO_SELECTION_FONT = 5284,
-    STR_CHEAT_EXPLODE = 5285,
-    STR_CHEAT_EXPLODE_TIP = 5286,
+
     STR_DEBUG_RIDE_ALREADY_BROKEN = 5287,
     STR_DEBUG_RIDE_IS_CLOSED = 5288,
     STR_DEBUG_NO_BREAKDOWNS_AVAILABLE = 5289,
