@@ -7,6 +7,7 @@
 - Fix: [#13334] Uninitialised variables in CustomTabDesc.
 - Fix: [#13342] Rename tabChange to onTabChange in WindowDesc interface.
 - Improved: [#12917] Changed peep movement so that they stay more spread out over the full width of single tile paths.
+- Removed: [#13423] Built-in explode guests cheat (replaced by plug-in).
 
 0.3.2 (2020-11-01)
 ------------------------------------------------------------------------
